tests/spec/emit/snapshots/if_struct_literal_in_condition.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct Point { x: int, y: int }
  
  impl Point {
    fn sum(self) -> int { self.x + self.y }
  }
  
  fn test() -> int {
    if Point { x: 1, y: 2 }.sum() > 0 {
      1
    } else {
      0
    }
  }
---
package main

type Point struct {
	x int
	y int
}

func (p Point) sum() int {
	return p.x + p.y
}

func test() int {
	if (Point{
		x: 1,
		y: 2,
	}).sum() > 0 {
		return 1
	}
	return 0
}
