tests/spec/emit/snapshots/if_with_user_never_branch_tail.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn die() -> Never { panic("dead") }
  
  fn test() -> int {
    if true { die() } else { 1 }
  }
---
package main

func die() {
	panic("dead")
}

func test() int {
	if true {
		die()
	}
	return 1
}
