tests/spec/emit/snapshots/imaginary_float.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> complex128 {
    3.14i
  }
---
package main

func test() complex128 {
	return 3.14i
}
