tests/spec/emit/snapshots/imaginary_integer.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> complex128 {
    4i
  }
---
package main

func test() complex128 {
	return 4i
}
