tests/spec/emit/snapshots/imaginary_zero.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> complex128 {
    0i
  }
---
package main

func test() complex128 {
	return 0i
}
